--- a/Практика 1/Лаба1.md
+++ b/Практика 1/Лаба1.md
@@ -1,1 +1,91 @@
+# Отчет по практической работе №1
+
+## Установка 2 виртуальных машин
+- Настроены две виртуальные машины с именами `rastegaev1` и `rastegaev2`.
+- Обе машины используют ОС Debian.
+
+---
+
+## Настройка сети
+1. **Изменение конфигурации сетевых адаптеров**:
+   - Для связи между виртуальными машинами выбран **внутренний адаптер (Host-only)**.
+   - Для подключения к интернету использовался **NAT-адаптер**.
+2. **Проверка связи**:
+   - Выполнен пинг между `rastegaev1` и `rastegaev2`. Связь установлена успешно.
+
+**Комментарий:** Были трудности с настройкой сетевых интерфейсов, исправлены параметры NAT и внутренней сети.
+
+**Скриншот:**
+![Настройка сети](sandbox:/mnt/data/image.png)
+
+---
+
+## Настройка rsyslog
+
+### Настройка rsyslog на `rastegaev2` (сервер):
+- Добавлены строки в конфигурацию `/etc/rsyslog.conf` для прослушивания сообщений через TCP и UDP.
+- Выполнен перезапуск службы `rsyslog`.
+
+### Настройка rsyslog на `rastegaev1` (клиент):
+- Добавлена строка `*.* @@192.168.1.2:514` в конфигурацию для отправки логов на сервер `rastegaev2`.
+- Перезапущена служба `rsyslog`.
+
+**Результат:** Логи успешно передаются с клиента на сервер.
+
+**Скриншот:**
+![Настройка rsyslog](sandbox:/mnt/data/image.png)
+
+---
+
+## Установка и настройка Loki на сервере (rastegaev2)
+- Установлен Loki из официального репозитория GitHub.
+- Настроена конфигурация для приёма логов через rsyslog.
+- Проверена доступность службы с помощью команды `curl http://localhost:3100/ready`. Сервис работает корректно.
+
+**Комментарий:** Были сложности с конфигурацией сети, которые устранялись по ходу выполнения.
+
+**Скриншот:**
+![Установка Loki](sandbox:/mnt/data/image.png)
+
+---
+
+## Установка и настройка Promtail на `rastegaev1`
+- Установлен Promtail из официального репозитория.
+- Настроен для отправки логов на Loki (`rastegaev2`).
+- В конфигурацию добавлены пути для мониторинга системных логов.
+
+**Результат:** Promtail успешно отправляет логи в Loki.
+
+**Скриншот:**
+![Установка Promtail](sandbox:/mnt/data/image.png)
+
+---
+
+## Установка SigNoz на сервере (rastegaev2)
+1. **Установка:**
+   - Клонирован репозиторий SigNoz.
+   - Установлены Docker и Docker Compose для развёртывания SigNoz.
+2. **Запуск контейнеров:**
+   - Контейнеры `clickhouse` и `query-service` запущены.
+   - В процессе были ошибки, связанные с отсутствием базы данных в ClickHouse.
+3. **Исправления:**
+   - Создана база данных `signoz` вручную в контейнере ClickHouse.
+   - Конфигурация SigNoz скорректирована для указания правильного пути к базе данных.
+
+**Комментарий:** Проблемы с правами доступа к Docker сокету и настройкой ClickHouse устранены.
+
+**Скриншот:**
+![Установка SigNoz](sandbox:/mnt/data/image.png)
+
+---
+
+## Итоги
+В ходе практической работы выполнено:
+1. Установка и настройка двух виртуальных машин.
+2. Настройка rsyslog для передачи логов между машинами.
+3. Установка Loki и Promtail для управления логами.
+4. Частичная настройка SigNoz с устранением большинства возникающих проблем.
+
+**Скриншот:**
+![Итоги работы](sandbox:/mnt/data/image.png)
 
