--- a/Практика 1/Лаба1.md
+++ b/Практика 1/Лаба1.md
@@ -1,4 +1,5 @@
 # Отчет по практической работе №1
+## Растегаев И.Г. ББМО-01-23
 
 ## Установка 2 виртуальных машин
 - Настроены две виртуальные машины с именами `rastegaev1` и `rastegaev2`.
