--- a/Практика 1/Лаба1.md
+++ b/Практика 1/Лаба1.md
@@ -1,16 +1,20 @@
-# Отчет по практической работе №1
+# **Отчет по практической работе №1**
 ## Растегаев И.Г. ББМО-01-23
 
-## Установка 2 виртуальных машин
+---
+
+## **1. Установка двух виртуальных машин**
 - Настроены две виртуальные машины с именами `rastegaev1` и `rastegaev2`.
+
 ![](https://i.imgur.com/yk6wiYd.png)
 
 ---
 
-## Настройка сети
+## **2. Настройка сети**
 1. **Изменение конфигурации сетевых адаптеров**:
    - Для связи между виртуальными машинами выбран **внутренний адаптер (Host-only)**.
    - Для подключения к интернету использовался **NAT-адаптер**.
+
 2. **Проверка связи**:
    - Выполнен пинг между `rastegaev1` и `rastegaev2`. Связь установлена успешно.
 
@@ -20,31 +24,37 @@
 
 ---
 
-## Настройка rsyslog
+## **3. Настройка rsyslog**
 
-### Настройка rsyslog на `rastegaev2` (сервер):
-- Добавлены строки в конфигурацию `/etc/rsyslog.conf` для прослушивания сообщений через TCP и UDP.
-- Выполнен перезапуск службы `rsyslog`.
+### **На сервере `rastegaev2`**:
+1. Добавлены строки в конфигурацию `/etc/rsyslog.conf` для прослушивания сообщений через TCP и UDP.
+2. Создана папка для хранения удалённых логов, настроены права доступа.
+3. Перезапущена служба `rsyslog`.
+
 ![](https://i.imgur.com/fNWiMMS.png)
 ![](https://i.imgur.com/9MkNDOp.png)
 
-### Настройка rsyslog на `rastegaev1` (клиент):
-- Добавлена строка `*.* @@192.168.1.2:514` в конфигурацию для отправки логов на сервер `rastegaev2`.
-- Перезапущена служба `rsyslog`.
+### **На клиенте `rastegaev1`**:
+1. Добавлена строка `*.* @@192.168.1.2:514` для отправки логов на сервер.
+2. Выполнен перезапуск `rsyslog`.
 
-**Результат:** Логи успешно передаются с клиента на сервер.
+**Результат**: Логи успешно передаются с клиента на сервер.
 
 ![](https://i.imgur.com/dK103ZI.png)
 ![](https://i.imgur.com/o4CAbLi.png)
 
 ---
 
-## Установка и настройка Loki на сервере (rastegaev2)
-- Установлен Loki из официального репозитория GitHub.
-- Настроена конфигурация для приёма логов через rsyslog.
-- Проверена доступность службы с помощью команды `curl http://localhost:3100/ready`. Сервис работает корректно.
+## **4. Установка и настройка Loki на сервере (`rastegaev2`)**
+1. Loki загружен из официального репозитория GitHub и установлен.
+2. Конфигурация файла `/etc/loki-config.yaml` настроена для приёма логов.
+3. Проверена доступность Loki:
+   ```bash
+   curl http://localhost:3100/ready
+   ```
+   Сервис работает корректно.
 
-**Комментарий:** Были сложности с конфигурацией сети, которые устранялись по ходу выполнения.
+**Комментарий:** Были сложности с настройкой конфигурации, которые были устранены.
 
 ![](https://i.imgur.com/Zszyadu.png)
 ![](https://i.imgur.com/6sLhrVi.png)
@@ -53,12 +63,12 @@
 
 ---
 
-## Установка и настройка Promtail на `rastegaev1`
-- Установлен Promtail из официального репозитория.
-- Настроен для отправки логов на Loki (`rastegaev2`).
-- В конфигурацию добавлены пути для мониторинга системных логов.
+## **5. Установка и настройка Promtail на клиенте (`rastegaev1`)**
+1. Promtail загружен и установлен из официального репозитория.
+2. Файл `/etc/promtail-config.yaml` настроен для мониторинга системных логов и отправки их на сервер Loki.
+3. Запуск Promtail выполнен и проверен.
 
-**Результат:** Promtail успешно отправляет логи в Loki.
+**Результат**: Логи успешно отправляются на Loki.
 
 ![](https://i.imgur.com/5D1FY7M.png)
 ![](https://i.imgur.com/XatVyz2.png)
@@ -67,31 +77,36 @@
 ![](https://i.imgur.com/9c6qnfx.png)
 ![](https://i.imgur.com/li7tooZ.png)
 ![](https://i.imgur.com/8O7MjxC.png)
+
 ---
 
-## Установка SigNoz на сервере (rastegaev2)
-1. **Установка:**
+## **6. Установка SigNoz на сервере (`rastegaev2`)**
+1. **Установка**:
    - Клонирован репозиторий SigNoz.
    - Установлены Docker и Docker Compose для развёртывания SigNoz.
-2. **Запуск контейнеров:**
-   - Контейнеры `clickhouse` и `query-service` запущены.
-   - В процессе были ошибки, связанные с отсутствием базы данных в ClickHouse.
-3. **Исправления:**
-   - Создана база данных `signoz` вручную в контейнере ClickHouse.
-   - Конфигурация SigNoz скорректирована для указания правильного пути к базе данных.
 
-**Комментарий:** Проблемы с правами доступа к Docker сокету и настройкой ClickHouse устранены.
+2. **Запуск контейнеров**:
+   - Контейнеры `clickhouse` и `query-service` запущены.
+   - Исправлены ошибки, связанные с отсутствием базы данных в ClickHouse.
+
+3. **Исправления**:
+   - База данных `signoz` создана вручную в контейнере ClickHouse.
+   - Конфигурация SigNoz обновлена.
+
+**Комментарий**: Проблемы с правами доступа к Docker сокету и настройкой ClickHouse устранены.
 
 ![](https://i.imgur.com/tqgJ3zd.png)
 
 ---
 
-## Итоги
+## **7. Итоги**
 В ходе практической работы выполнено:
 1. Установка и настройка двух виртуальных машин.
-2. Настройка rsyslog для передачи логов между машинами.
-3. Установка Loki и Promtail для управления логами.
-4. Частичная настройка SigNoz с устранением большинства возникающих проблем.
+2. Настройка **rsyslog** для передачи логов между машинами.
+3. Установка и настройка **Loki** для сбора и хранения логов.
+4. Настройка **Promtail** для отправки логов с клиента на сервер Loki.
+5. Частичная настройка **SigNoz** с устранением проблем при развёртывании.
 
+**Заключение**: Все задачи выполнены успешно, основные проблемы с сетью и настройкой сервисов устранены.
 
-
+![](https://i.imgur.com/XatVyz2.png)
