--- a/Практика 1/Лаба1.md
+++ b/Практика 1/Лаба1.md
@@ -38,7 +38,7 @@
 1. Добавлена строка `*.* @@192.168.1.2:514` для отправки логов на сервер.
 2. Выполнен перезапуск `rsyslog`.
 
-**Результат**: Логи успешно передаются с клиента на сервер.
+Логи успешно передаются с клиента на сервер.
 
 ![](https://i.imgur.com/dK103ZI.png)
 ![](https://i.imgur.com/o4CAbLi.png)
@@ -54,7 +54,7 @@
    ```
    Сервис работает корректно.
 
-**Комментарий:** Были сложности с настройкой конфигурации, которые были устранены.
+Были сложности с настройкой конфигурации, которые были устранены.
 
 ![](https://i.imgur.com/Zszyadu.png)
 ![](https://i.imgur.com/6sLhrVi.png)
@@ -68,7 +68,7 @@
 2. Файл `/etc/promtail-config.yaml` настроен для мониторинга системных логов и отправки их на сервер Loki.
 3. Запуск Promtail выполнен и проверен.
 
-**Результат**: Логи успешно отправляются на Loki.
+Логи успешно отправляются на Loki.
 
 ![](https://i.imgur.com/5D1FY7M.png)
 ![](https://i.imgur.com/XatVyz2.png)
@@ -93,9 +93,10 @@
    - База данных `signoz` создана вручную в контейнере ClickHouse.
    - Конфигурация SigNoz обновлена.
 
-**Комментарий**: Проблемы с правами доступа к Docker сокету и настройкой ClickHouse устранены.
+Проблемы с правами доступа к Docker сокету и настройкой ClickHouse устранены.
 
 ![](https://i.imgur.com/tqgJ3zd.png)
+![](https://i.imgur.com/XatVyz2.png)
 
 ---
 
@@ -107,6 +108,4 @@
 4. Настройка **Promtail** для отправки логов с клиента на сервер Loki.
 5. Частичная настройка **SigNoz** с устранением проблем при развёртывании.
 
-**Заключение**: Все задачи выполнены успешно, основные проблемы с сетью и настройкой сервисов устранены.
 
-![](https://i.imgur.com/XatVyz2.png)
